--- a/EventAttendanceChecker/Properties/Resources.resx
+++ b/EventAttendanceChecker/Properties/Resources.resx
@@ -121,4 +121,13 @@
   <data name="event_attendance_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\event_attendance_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="image eac" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\image eac.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Event Attendance Tracker" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Event Attendance Tracker.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Event Attendance Tracker1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Event Attendance Tracker1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
